crates/reinhardt-pages/tests/ui/form/fail/custom_widget_missing_adapter.stderr
error: CustomWidget requires adapter
  --> tests/ui/form/fail/custom_widget_missing_adapter.rs:13:5
   |
13 |                 widget: CustomWidget(picker) {
   |                 ^^^^^^
